--- a/BirthCoach/Storyboards/Base.lproj/SettingsStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/SettingsStoryboard_iPhone.storyboard
@@ -247,10 +247,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="OTJ-MG-haK" customClass="BCStretchableButton">
-                                <rect key="frame" x="10" y="5" width="64" height="31"/>
+                                <rect key="frame" x="20" y="237" width="138" height="52"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Cancel" backgroundImage="save-button.png">
+                                <state key="normal" title="Cancel" backgroundImage="cancel-button.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -260,11 +260,10 @@
                                 </state>
                                 <connections>
                                     <action selector="backButtonPressed:" destination="y3n-hD-w5n" eventType="touchUpInside" id="DTd-cX-ntC"/>
-                                    <action selector="backButtonPressed:" destination="RnN-bj-A3K" eventType="touchUpInside" id="r4n-WN-sgJ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="7No-Ci-f01" customClass="BCStretchableButton">
-                                <rect key="frame" x="262" y="5" width="53" height="31"/>
+                                <rect key="frame" x="177" y="237" width="123" height="52"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Save" backgroundImage="save-button.png">
@@ -278,10 +277,11 @@
                                 <connections>
                                     <action selector="backButtonPressed:" destination="RnN-bj-A3K" eventType="touchUpInside" id="amJ-Ip-Rzm"/>
                                     <action selector="backButtonPressed:" destination="y3n-hD-w5n" eventType="touchUpInside" id="z3o-Bg-ouF"/>
+                                    <action selector="save:" destination="y3n-hD-w5n" eventType="touchUpInside" id="MJr-tN-giQ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="2P9-1f-RQ3">
-                                <rect key="frame" x="133" y="295" width="55" height="44"/>
+                                <rect key="frame" x="182" y="163" width="97" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Play">
@@ -296,7 +296,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="K7Z-6U-8Gf">
-                                <rect key="frame" x="130" y="241" width="58" height="42"/>
+                                <rect key="frame" x="39" y="163" width="100" height="42"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Record">
@@ -516,6 +516,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="cancel-button.png" width="107" height="46"/>
         <image name="save-button-selected.png" width="162" height="46"/>
         <image name="save-button.png" width="162" height="46"/>
         <image name="settings-disclosure.png" width="20" height="34"/>
@@ -526,7 +527,9 @@
             <relationships>
                 <relationship kind="action" name="playStop:"/>
                 <relationship kind="action" name="recordStop:"/>
+                <relationship kind="action" name="save:"/>
                 <relationship kind="outlet" name="playButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="recordButton" candidateClass="UIButton"/>
             </relationships>
         </class>
         <class className="BCAudioAlertsViewController" superclassName="BCSettingsBaseViewController">
@@ -544,6 +547,7 @@
         <class className="BCMotivationalListViewController" superclassName="BCSettingsBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCMotivationalListViewController.h"/>
             <relationships>
+                <relationship kind="action" name="editPressed:"/>
                 <relationship kind="outlet" name="editButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="quoteTableView" candidateClass="UITableView"/>
             </relationships>
@@ -574,6 +578,7 @@
         <class className="BCSettingsViewController" superclassName="BCSettingsBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsViewController.h"/>
             <relationships>
+                <relationship kind="action" name="doneButtonPressed:"/>
                 <relationship kind="outlet" name="settingsTableView" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
             </relationships>
