--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -117,7 +117,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" id="KYF-Bj-iAR">
-                                        <rect key="frame" x="-275" y="48" width="301" height="44"/>
+                                        <rect key="frame" x="-275" y="48" width="301" height="64"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <subviews>
                                             <imageView contentMode="scaleToFill" image="orange-handle.png" id="vuW-L5-LUt">
@@ -263,6 +263,13 @@
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.97647058823529409" green="0.90196078431372551" blue="0.83137254901960778" alpha="1" colorSpace="deviceRGB"/>
                                             </view>
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="INTENSITY" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Edt-QG-JMU">
+                                                <rect key="frame" x="137" y="38" width="84" height="31"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="13"/>
+                                                <color key="textColor" red="0.94901960780000005" green="0.76862745099999996" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
@@ -315,6 +322,7 @@
                         <outlet property="nextContractionEstimateFlashLabel" destination="z6P-Sx-wcV" id="0Cs-ZN-7kT"/>
                         <outlet property="nextContractionEstimateLabel" destination="Dt8-Gn-Lyq" id="Yur-zC-g4I"/>
                         <outlet property="settingsButton" destination="0ya-54-ZtW" id="x1h-vZ-I7l"/>
+                        <outlet property="slideOutIntensityLabel" destination="Edt-QG-JMU" id="CYE-PJ-jsx"/>
                         <outlet property="startStopButton" destination="5fc-QZ-lLx" id="Ys9-Xr-fad"/>
                         <outlet property="timerBackgroundView" destination="Cpf-Qa-Y2s" id="Ga9-c9-tVw"/>
                         <outlet property="timerLabel" destination="eQf-Pf-xzs" id="D3e-vM-FDj"/>
@@ -1058,6 +1066,118 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <image name="settings.png" width="41" height="42"/>
         <image name="start-button.png" width="61" height="81"/>
     </resources>
+    <classes>
+        <class className="BCAveragesViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCAveragesViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="averageLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="averagesScrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="fifteenMinuteDuration" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fifteenMinuteFrequency" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fifteenMinuteIntensity" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fifteenMinuteNumberLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="minuteNumberScrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="oneHourDuration" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="oneHourFrequency" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="oneHourIntensity" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="pageControl" candidateClass="BCPageControl"/>
+                <relationship kind="outlet" name="sixtyMinuteNumberLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteDuration" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteFrequency" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteIntensity" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteNumberLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCBaseViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCBaseViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="backButtonPressed:"/>
+            </relationships>
+        </class>
+        <class className="BCContractionCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCContractionEditViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionEditViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelPressed:"/>
+                <relationship kind="action" name="donePressed:"/>
+                <relationship kind="action" name="savePressed:"/>
+                <relationship kind="outlet" name="cancelButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="doneBannerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="doneButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="durationPickerView" candidateClass="UIPickerView"/>
+                <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fadeView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="saveButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="startTimeLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="startTimePickerView" candidateClass="UIDatePicker"/>
+                <relationship kind="outlet" name="startTimeTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCFrequencyCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCFrequencyCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCHistoryViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCHistoryViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="deleteSelectedContraction:"/>
+                <relationship kind="action" name="selectedContractionIntensityPressed:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="contractionHistoryLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="contractionIntensityContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="contractionSlideOut" candidateClass="UIView"/>
+                <relationship kind="outlet" name="contractionTableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="durationHeaderLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyHeaderLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyTableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="headerContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="intensityHeaderLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="selectedContractionHandle" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="BCPageControl" superclassName="UIPageControl">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCPageControl.h"/>
+        </class>
+        <class className="BCRootViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCRootViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="deleteLastContraction:"/>
+                <relationship kind="action" name="lastContractionIntensityPressed:" candidateClass="UIButton"/>
+                <relationship kind="action" name="settingsButtonPressed:"/>
+                <relationship kind="action" name="startStopContraction:"/>
+                <relationship kind="outlet" name="averagesContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="historyContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="inspirationalLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intensityTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lastContractionContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="lastContractionHandle" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="lastContractionIntensityContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="lastContractionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lastContractionSlideOut" candidateClass="UIView"/>
+                <relationship kind="outlet" name="nextContractionEstimateFlashLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="nextContractionEstimateLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="settingsButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="slideOutIntensityLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="startStopButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="timerBackgroundView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="timerLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
