--- a/BirthCoach/Storyboards/Base.lproj/SettingsStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/SettingsStoryboard_iPhone.storyboard
@@ -57,7 +57,7 @@
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="settings-disclosure.png" id="lfi-ey-GBE">
-                                                    <rect key="frame" x="280" y="14" width="20" height="34"/>
+                                                    <rect key="frame" x="286" y="19" width="14" height="23"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
@@ -170,7 +170,7 @@
                                                     <color key="backgroundColor" red="0.87058823529999996" green="0.57254901960000004" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                                 </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="settings-disclosure.png" id="enw-f1-XMD">
-                                                    <rect key="frame" x="280" y="14" width="20" height="34"/>
+                                                    <rect key="frame" x="286" y="19" width="14" height="23"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
@@ -481,7 +481,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
@@ -519,8 +519,70 @@
         <image name="cancel-button.png" width="107" height="46"/>
         <image name="save-button-selected.png" width="162" height="46"/>
         <image name="save-button.png" width="162" height="46"/>
-        <image name="settings-disclosure.png" width="20" height="34"/>
+        <image name="settings-disclosure.png" width="14" height="23"/>
     </resources>
+    <classes>
+        <class className="BCAudioAlertEditViewController" superclassName="BCSettingsBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCAudioAlertEditViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="playButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="recordButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="BCAudioAlertsViewController" superclassName="BCSettingsBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCAudioAlertsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="remindersTableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="BCBaseViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCBaseViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="backButtonPressed:"/>
+            </relationships>
+        </class>
+        <class className="BCMotivationalListViewController" superclassName="BCSettingsBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCMotivationalListViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="editPressed:"/>
+                <relationship kind="outlet" name="editButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="quoteTableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="BCMotivationalQuoteEditViewController" superclassName="BCSettingsBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCMotivationalQuoteEditViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="BCSettingsBaseViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsBaseViewController.h"/>
+        </class>
+        <class className="BCSettingsOnOffCell" superclassName="BCSettingsTitleCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsOnOffCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="onOffSwitch" candidateClass="UISwitch"/>
+            </relationships>
+        </class>
+        <class className="BCSettingsTitleCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsTitleCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="disclosureImageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="lowerBorder" candidateClass="UIView"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCSettingsViewController" superclassName="BCSettingsBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="settingsTableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCStretchableButton" superclassName="UIButton">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCStretchableButton.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
